--- a/src/main/resources/CSS/FXML/Sidebar.css
+++ b/src/main/resources/CSS/FXML/Sidebar.css
@@ -1,8 +1,8 @@
-.packlist{
+.PackList{
     -fx-opacity: 1;
 }
 
-.packlist.list-view {
+.PackList.list-view {
     -fx-padding: 5px ;
     /*-fx-background-color: #2c2f33;*/
     -fx-background-color: linear-gradient(to top, #191919, #595959);
@@ -10,7 +10,7 @@
     /* -fx-opacity: 0.8; */
 }
 
-.packlist.list-cell:filled {
+.PackList.list-cell:filled {
     -fx-cell-size: 50;
     -fx-background-color: firebrick;
     -fx-padding: 2px 10px ;
@@ -19,30 +19,30 @@
     -fx-content-display: right ;
 }
 
-.packlist.list-cell:empty {
+.PackList.list-cell:empty {
     -fx-background-color: transparent ;
 }
 
-.packlist.list-cell:filled:hover, .packlist.list-cell:filled:selected{
+.PackList.list-cell:filled:hover, .PackList.list-cell:filled:selected{
      -fx-scale-y: 1.05;
      -fx-scale-x: 1.05;
 }
 
-.packlist.list-cell:filled:hover {
+.PackList.list-cell:filled:hover {
      -fx-background-color: #661313;
 }
 
-.packlist.list-cell:filled:selected {
+.PackList.list-cell:filled:selected {
      -fx-background-color: #FFF0F5;
      -fx-text-fill: black;
 }
 
-.packlist.list-cell:filled:pressed {
+.PackList.list-cell:filled:pressed {
      -fx-background-color: #303030;
      -fx-text-fill: #FFF0F5;
 }
 
-.tooltip, .packlist.tooltip{
+.tooltip, .PackList.tooltip{
     -fx-background-color: #404040;
     -fx-text-fill: #DCDCDC;
     -fx-opacity: 0.8;
